# parakeet-dictation

./: .env.example  .gitignore  README.md  constraints.txt  pyproject.toml  requirements.txt  run.sh
.github/workflows/: publish-to-pypi.yml
Formula/: parakeet-dictation.rb
src/: bedrock_client.py  main.py  text_selection.py
src/parakeet_dictation/: main.py
